tdf#126678 - Consider "Include formats" option during sort

Change-Id: Ib972ad6c5042bde6b0c79bf10bace6baab1e935e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/111234
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>