sc/inc/document.hxx
@@ -1407,6 +1407,8 @@ public:
                                 If TRUE, consider the presence of cell notes besides data.
                         @param  bConsiderCellDrawObjects
                                 If TRUE, consider the presence of draw objects anchored to the cell.
+                        @param bConsiderCellFormats
+                                If TRUE, consider the presence of cell formats.
 
                         @returns true if there is any data, false if not.
                      */
@@ -1415,7 +1417,8 @@ public:
                                           SCCOL& rEndCol, SCROW& rEndRow, bool bColumnsOnly,
                                           bool bStickyTopRow = false, bool bStickyLeftCol = false,
                                           bool bConsiderCellNotes = false,
-                                          bool bConsiderCellDrawObjects = false ) const;
+                                          bool bConsiderCellDrawObjects = false,
+                                          bool bConsiderCellFormats = false ) const;
 
     /**
      * Return the last non-empty row position in given columns that's no
